# umbot

src/FAST_LIO/POSE/: poses.txt  poses_bak.txt
src/FAST_LIO/config/: horizon.yaml
src/FAST_LIO/launch/: mapping_mid360.launch  mapping_mid360_no_rviz.launch
src/FAST_LIO/rviz_cfg/: loam_livox.rviz
src/FAST_LIO/scripts/: construct_database.py  embeddings.npy  timestamps.npy
src/FAST_LIO/src/: laserMapping.cpp  preprocess.cpp  preprocess.h
src/FAST_LIO_LOCALIZATION-ROS-NOETIC/: CMakeLists.txt
src/FAST_LIO_LOCALIZATION-ROS-NOETIC/config/: mid360.yaml
src/FAST_LIO_LOCALIZATION-ROS-NOETIC/launch/: localization_mid360.launch  localization_ouster64.launch
src/FAST_LIO_LOCALIZATION-ROS-NOETIC/rviz_cfg/: localization.rviz
src/FAST_LIO_LOCALIZATION-ROS-NOETIC/scripts/: global_localization.py
src/FAST_LIO_LOCALIZATION-ROS-NOETIC/src/: laserMapping.cpp  preprocess.cpp  preprocess.h
src/global_localization/: CMakeLists.txt  package.xml
src/global_localization/launch/: global_localization.launch  global_localization_docker.launch
src/global_localization/scripts/: global_localization.py
src/tools/: CMakeLists.txt  package.xml
src/tools/launch/: points_filter.launch
src/tools/src/: points_filter.cpp
